--- a/src/screens/PlayResult.css
+++ b/src/screens/PlayResult.css
@@ -6,6 +6,9 @@
 }
 
 
+.playResult__hero {
+  margin-top: 30px;
+}
 .playResult__yourChoices {
   padding: 50px 0;
 }
@@ -13,6 +16,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-top: 10px;
 }
 .playResult__yourChoice {
   width: calc(25% - 30px);
@@ -25,15 +29,12 @@
   opacity: 0.4;
 }
 .playResult__emptyImg {
-  background-color:yellow;
   width: 100%;
-  height: 100%;
-  
+  height:calc((25vw - 30px) * 0.65);
 }
 .playResult__yourChoice p {
   position: absolute;
   width: 100%;
-  height:100%;
   top: 35%;
   left: 0;
   font-weight:bold;
@@ -42,15 +43,20 @@
 
 
 
-.playResult__qrCode {
-  width: 100%;
-  max-width: 200px;
-  margin: 0 auto;
+.playResult__copyLink {
+  padding: 20px 30px;
+  border: 1px solid #000;
+  width: fit-content;
+  margin: 10px auto;
+  border-radius: 100px;
 }
-.playResult__qrWrapper {
-  background-color: #fff;
+.playResult__linkCopiedAlert {
+  font-size: 0.8em;
+  color:#155F28;
 }
-.playResult__qrCode img {
-  width: 100%;
-  display:block;
+.playResult__social {
+  padding-top: 40px;
+}
+.playResult__social > * {
+  margin: 10px;
 }
