--- a/src/screens/InPlay.css
+++ b/src/screens/InPlay.css
@@ -1,5 +1,10 @@
+.inPlayApp {
+  overflow:hidden;
+  height: 100vh;
+}
+
+
 .inPlay {
-  height: calc(100vh - 54px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -11,6 +16,9 @@
 .inPlay__imageWrapper {
   padding: 0 10px;
   margin-bottom:25px;
+  position: absolute;
+  bottom:10px;
+  width: calc(100% - 20px);
 }
 .inPlay__image {
   height: 40vh;
@@ -23,8 +31,8 @@
 }
 .inPlay__vsWrapper {
   position: absolute;
-  top: calc(50% - 15px);
-  left: calc(50% - 45px);
+  top: calc(50% - 70px);
+  left: calc(50% - 50px);
   width:100px;
   height:100px;
   z-index:999;
