--- a/src/screens/PlayResult.css
+++ b/src/screens/PlayResult.css
@@ -19,8 +19,8 @@
   margin-top: 10px;
 }
 .playResult__yourChoice {
-  width: calc(25% - 30px);
-  margin-bottom:10px;
+  width: calc(25% - 20px);
+  margin-bottom:3px;
   position: relative;
 }
 .playResult__yourChoice img{
@@ -56,7 +56,12 @@
 }
 .playResult__social {
   padding-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 20px 0 20px;
+  max-width: 300px;
+  margin: 0 auto;
 }
-.playResult__social > * {
+/* .playResult__social > * {
   margin: 10px;
-}
+} */
